Bug 154248 - FILEOPEN PPTX: multiline field wrapping breaks rendering of links (and font changes)
Summary: FILEOPEN PPTX: multiline field wrapping breaks rendering of links (and font c...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Attila Szűcs
URL:
Whiteboard: target:24.8.0
Keywords: filter:pptx
Depends on:
Blocks: Hyperlink PPTX
  Show dependency treegraph
 
Reported: 2023-03-17 22:21 UTC by Gerald Pfeifer
Modified: 2024-04-15 09:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample compared MSO LO-7.5 LO-24.8 (556.48 KB, image/png)
2024-02-27 13:53 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-03-17 22:21:14 UTC
This is another facet of bug #148966 which got closed, since the issue
in focus originally got resolved.

Specifically the document from attachment #180434 [details] renders incorrectly
(wrt. links and font changes) as Timur highlighted in attachment #180435 [details] .
Comment 1 Buovjaga 2023-03-31 14:01:35 UTC
I don't know about any link issues, but I see the font changes for item 5 and 8.

Explaining the link issues might help.

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2ca71b5c6e0374254e7c75c75e54fa6a8caebfde
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 30 March 2023
Comment 2 Gerald Pfeifer 2023-03-31 15:34:31 UTC
(In reply to Buovjaga from comment #1)
> Explaining the link issues might help.

Sorry, I realize I may have mislead here: Items 5 (right column) and 
6 (right column) do not actually feature a link (I verified with 365), 
and in other cases like 5 (left column) or 8 the pointer changes and
allows following the link when hovering, even if the rendering is off.
Comment 3 Commit Notification 2024-01-16 11:07:02 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/acd3f201a93ddac406a1e86f8b055fdbd2a64400

tdf#154248 Impress: fix color of hyperlink

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-02-16 17:11:21 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ed6d80622174826f8b7413529320ccd94782296

tdf#154248 sd: change multiline field wrapping

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gerald Pfeifer 2024-02-17 16:52:50 UTC
This looks fine to me now with the latest daily snapshot of

   Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
   Build ID: 5a4ab8cb3a3fbf15de11afc5d8876aaa8a7784c9
   CPU threads: 12; OS: Linux 6.7; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US

@Timur, you did the original visual analysis; can you confirm as well?
Comment 6 Timur 2024-02-27 13:53:19 UTC
Created attachment 192824 [details]
Sample compared MSO LO-7.5 LO-24.8

As seen in comparison image, this is better now, without breaks and with better colors. For the initial report, that seems sufficient.

There are differences:
- some underlines are different (I would not go after that)
- some of them may be expected as I did not have Poppins font, 
- Open Sans 14 pt in the left 5. is different ( left text box is 14,70x16,71 cm in LO, similar in MSO) and that is down

Issues that seems worth further pursue for me are:
1. MSO does not break words in a link, while LO does. 
2. LO cannot click in a link (like to change words)
Comment 7 Timur 2024-02-28 08:44:41 UTC
Click in a link to edit seems to be bug 126329.
Comment 8 Gerald Pfeifer 2024-04-15 09:56:04 UTC
(In reply to Timur from comment #6)
> Issues that seems worth further pursue for me are:
> 1. MSO does not break words in a link, while LO does. 

I created bug #160668 for this.

Apart from this and the other follow-up mentioned in the previous 
comment this has been addressed; verified with

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1dc92b9e9951ef118d2d823d54f9a022c2e41a27
CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US